Fix misalignment of the Attacher widget's add-a-row button.
FossilOrigin-Name: ddb40c531647b8bd9100266ecd18949321e8c0dbe7f8c56584420b6e59719883

--- a/src/default.css
+++ b/src/default.css
@@ -2126,6 +2126,7 @@ body.fossil-dark-style  .Attacher .attach-dropzone.dragover{
   padding: 0.5em 1em;
   cursor: pointer;
   flex-grow: 2;
+  line-height: initial/*work around an inherited alignment quirk*/;
 }
 
 .animate-entrance {
